[gd_scene load_steps=15 format=3 uid="uid://genbtx4li8h5"]

[ext_resource type="Script" path="res://addons/cheatsheet/scripts/cheatsheet.gd" id="1_xc2al"]
[ext_resource type="Theme" uid="uid://cx73s5p668lkb" path="res://addons/cheatsheet/resources/theme.tres" id="2_luvyh"]
[ext_resource type="Script" path="res://addons/cheatsheet/scripts/stats_display.gd" id="3_rjkwo"]
[ext_resource type="Material" uid="uid://djy8vjdw5lvhj" path="res://addons/cheatsheet/shaders/background.tres" id="4_8o8u8"]
[ext_resource type="Script" path="res://addons/cheatsheet/scripts/pallette.gd" id="5_4dg0m"]

[sub_resource type="InputEventKey" id="InputEventKey_gm0jc"]
device = -1
pressed = true
keycode = 96
unicode = 96

[sub_resource type="Shortcut" id="Shortcut_20rb7"]
events = [SubResource("InputEventKey_gm0jc")]

[sub_resource type="InputEventAction" id="InputEventAction_6epse"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_5nuxt"]
events = [SubResource("InputEventAction_6epse")]

[sub_resource type="Theme" id="Theme_jlyih"]
Label/colors/font_shadow_color = Color(0, 0, 0, 1)
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/constants/shadow_outline_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex44x"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf52s"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pjl7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1u7m5"]
bg_color = Color(0, 0, 0, 1)

[node name="Cheatsheet" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xc2al")
toggle_shortcut = SubResource("Shortcut_20rb7")
close_shortcut = SubResource("Shortcut_5nuxt")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_luvyh")

[node name="StatsDisplay" type="MarginContainer" parent="GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 37.0
grow_horizontal = 2
theme = SubResource("Theme_jlyih")
script = ExtResource("3_rjkwo")

[node name="HBoxContainer" type="HFlowContainer" parent="GUI/StatsDisplay"]
layout_mode = 2
theme_override_constants/h_separation = 32
alignment = 1

[node name="TimeLabel" type="Label" parent="GUI/StatsDisplay/HBoxContainer"]
layout_mode = 2
text = "FPS: 60"

[node name="MemLabel" type="Label" parent="GUI/StatsDisplay/HBoxContainer"]
visible = false
layout_mode = 2
text = "MEM: 50% 50MB/100MB"

[node name="ObjLabel" type="Label" parent="GUI/StatsDisplay/HBoxContainer"]
layout_mode = 2
text = "1234 objects and 123 nodes"

[node name="RenderLabel" type="Label" parent="GUI/StatsDisplay/HBoxContainer"]
layout_mode = 2
text = "VRAM: 10MB"

[node name="ConsoleKeyPrompt" type="PanelContainer" parent="GUI"]
unique_name_in_owner = true
visible = false
material = ExtResource("4_8o8u8")
layout_mode = 1
offset_right = 219.0
offset_bottom = 37.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ex44x")

[node name="MarginContainer" type="MarginContainer" parent="GUI/ConsoleKeyPrompt"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="GUI/ConsoleKeyPrompt/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Press [`] to open the console"

[node name="VSplit" type="VSplitContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="PanelContainer" parent="GUI/VSplit"]
unique_name_in_owner = true
material = ExtResource("4_8o8u8")
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nf52s")

[node name="Margin" type="MarginContainer" parent="GUI/VSplit/Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="GUI/VSplit/Menu/Margin"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConsoleText" type="RichTextLabel" parent="GUI/VSplit/Menu/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 1
theme_override_font_sizes/bold_font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_6pjl7")
bbcode_enabled = true
text = "[b]Welcome to the cheatsheet console[/b]

[color=gray]Type '[color=ff8ccc]help[/color]' to list the available commands[/color]
"
scroll_following = true

[node name="HBox" type="HBoxContainer" parent="GUI/VSplit/Menu/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="GUI/VSplit/Menu/Margin/VBox/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 1, 0.760784, 1)
text = "$ "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommandInput" type="LineEdit" parent="GUI/VSplit/Menu/Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter a command to run or type 'help' to list all commands..."
clear_button_enabled = true
middle_mouse_paste_enabled = false
select_all_on_focus = true
caret_blink_interval = 0.5

[node name="PickerButton" type="Button" parent="GUI/VSplit/Menu/Margin/VBox/HBox"]
layout_mode = 2
tooltip_text = "coming soon..."
focus_mode = 1
disabled = true
text = " List "

[node name="Empty" type="Control" parent="GUI/VSplit"]
layout_mode = 2
size_flags_vertical = 3

[node name="Center" type="CenterContainer" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_4dg0m")

[node name="PanelContainer" type="PanelContainer" parent="GUI/Center"]
material = ExtResource("4_8o8u8")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1u7m5")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Center/PanelContainer"]
layout_mode = 2

[node name="CommandList" type="ItemList" parent="GUI/Center/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_vertical = 3
item_count = 3
item_0/text = "help"
item_1/text = "info"
item_2/text = "clear"

[connection signal="commands_changed" from="." to="GUI/Center" method="_on_cheatsheet_commands_changed"]
[connection signal="meta_clicked" from="GUI/VSplit/Menu/Margin/VBox/ConsoleText" to="." method="_on_console_text_meta_clicked"]
[connection signal="gui_input" from="GUI/VSplit/Menu/Margin/VBox/HBox/CommandInput" to="." method="_on_command_input_gui_input"]
[connection signal="text_changed" from="GUI/VSplit/Menu/Margin/VBox/HBox/CommandInput" to="." method="_on_command_input_text_changed"]
[connection signal="text_submitted" from="GUI/VSplit/Menu/Margin/VBox/HBox/CommandInput" to="." method="_on_command_input_text_submitted"]
[connection signal="item_activated" from="GUI/Center/PanelContainer/VBoxContainer/CommandList" to="GUI/Center" method="_on_command_list_item_activated"]
